<resources>
    <string name="app_name">Trips</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="upload_your_profile_photo">upload your profile photo</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone number</string>
    <string name="todo">TODO</string>
    <string name="trip_app">Trip-App</string>
    <string name="add_note">Add Note</string>
    <string name="note">note</string>
    <string name="day">Day</string>
    <string name="add">ADD</string>
    <string name="time">Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Title</string>
    <string name="trip_type">Trip Type</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="edit">EDIT</string>
    <string name="my_trips">My Trips</string>
    <string name="history">History</string>
    <string name="status">Status</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="start">Start</string>
    <string name="time_temp">HH:MM</string>
    <string name="date_temp">DD/MM/YYYY</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="menu">3 dots icon</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_image">User Image</string>
</resources>
