<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BDF4EE">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/register_main_view"
                android:layout_width="0dp"
                android:layout_height="730dp"
                android:background="@drawable/register_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/reg_phone_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="#67C6B8"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/reg_confirm_password_text"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/reg_confirm_password_text"
                app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password_text" />

            <EditText
                android:id="@+id/reg_confirm_password_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:backgroundTint="#67C6B8"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/reg_password_text"
                app:layout_constraintStart_toStartOf="@+id/reg_password_text"
                app:layout_constraintTop_toBottomOf="@+id/reg_password_text" />

            <EditText
                android:id="@+id/reg_username_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:backgroundTint="#67C6B8"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textWebEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/reg_email_text"
                app:layout_constraintStart_toStartOf="@+id/reg_email_text"
                app:layout_constraintTop_toBottomOf="@+id/reg_email_text" />

            <EditText
                android:id="@+id/reg_password_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:backgroundTint="#67C6B8"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/reg_username_text"
                app:layout_constraintStart_toStartOf="@+id/reg_username_text"
                app:layout_constraintTop_toBottomOf="@+id/reg_username_text" />

            <EditText
                android:id="@+id/reg_email_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:backgroundTint="#67C6B8"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/reg_upload_photo"
                app:layout_constraintStart_toStartOf="@+id/reg_upload_photo"
                app:layout_constraintTop_toBottomOf="@+id/reg_upload_photo" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_btn"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/purple_button"
                android:text="@string/register"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/reg_phone_text"
                app:layout_constraintStart_toStartOf="@+id/reg_phone_text"
                app:layout_constraintTop_toBottomOf="@+id/reg_phone_text" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="47dp"
                android:contentDescription="@string/todo"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                app:layout_constraintTop_toTopOf="@+id/register_main_view"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@android:drawable/ic_menu_gallery"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/reg_upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/upload_your_profile_photo"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>