<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <View
          android:id="@+id/login_main_view"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:background="@drawable/login_view"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <View
          android:id="@+id/logo_view3"
          android:layout_width="113dp"
          android:layout_height="89dp"
          android:layout_marginTop="30dp"
          android:background="@drawable/airplane"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <EditText
          android:id="@+id/email_text"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="288dp"
          android:autofillHints=""
          android:backgroundTint="#f79256"
          android:ems="10"
          android:hint="@string/email"
          android:inputType="textWebEmailAddress"
          android:minHeight="48dp"
          android:textColorHint="@color/black"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.497"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/login_btn"
          android:layout_width="250dp"
          android:layout_height="60dp"
          android:layout_marginTop="70dp"
          android:background="@drawable/purple_button"
          android:text="@string/login"
          android:textAlignment="center"
          android:textAllCaps="false"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="@+id/password_text"
          app:layout_constraintHorizontal_bias="0.496"
          app:layout_constraintStart_toStartOf="@+id/password_text"
          app:layout_constraintTop_toBottomOf="@+id/password_text"
          tools:ignore="TextContrastCheck,TextContrastCheck" />

      <EditText
          android:id="@+id/password_text"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:autofillHints=""
          android:backgroundTint="#f79256"
          android:ems="10"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:minHeight="48dp"
          android:textColorHint="@color/black"
          app:layout_constraintEnd_toEndOf="@+id/email_text"
          app:layout_constraintStart_toStartOf="@+id/email_text"
          app:layout_constraintTop_toBottomOf="@+id/email_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>